--- a/index.html
+++ b/index.html
@@ -25,14 +25,40 @@
 <meta property="twitter:title" content="Temos uma composição para você também"/>
 <meta property="twitter:url" content="http://www.arquivocristao.com.br/"/>
 <meta property="twitter:image" content="http://www.urlinteligente.com/playgospel/coverart.jpg"/>
-
+<link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/21046730?v=3&s=200">
+  <title>Rádio Composições Divinas</title>
+  </head>
 
 
 <div style="width:100%"><img src="http://rcd.arquivocristao.com.br/banner_radio_composi%C3%A7oes_divinas.png" style="width:100%" /></div>
+
+<p align="center"><div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.3&appId=345836655604854";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+      
+<center>   
+<div class="fb-like" data-href="https://www.facebook.com/ArquivoEvangelico/" data-width="" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+
+<hr /><hr />
 <center>
+
 <div style="width:80%"><img src="https://i.ytimg.com/vi/87AC085P9Gk/maxresdefault.jpg" style="width:80%" /></div>
+<hr /><hr />
+<div style="width:80%"><img src="https://scontent-gru2-1.xx.fbcdn.net/v/t1.0-9/19029588_1394969850596301_8473152302348916831_n.jpg?oh=aa6cc75c82eb5cc2b0eafec599f6a84c&oe=5AA3CA43" style="width:80%" /></div>
+<hr /><hr />
+<div style="width:80%"><img src="https://scontent-gru2-1.xx.fbcdn.net/v/t1.0-9/19105741_1395389260554360_3579632257448188356_n.jpg?oh=0906641b3c9b2fe1ddefeb915ff68848&oe=5A95FB3C" style="width:80%" /></div>
+<hr /><hr />
+<p style="text-align:center"><iframe frameborder="0" height="200" scrolling="yes" src="      
 
-
+ http://urlinteligente.com/versiculos_biblicos1.html    
+ 
+ " width="400"></p>
+<hr /><hr />
 
  </body>
 </html>
