--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 }(document, 'script', 'facebook-jssdk'));</script>
       
 <center>   
-<div class="fb-like" data-href="https://www.facebook.com/ArquivoEvangelico/" data-width="" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+<div class="fb-like" data-href="https://www.facebook.com/Composi%C3%A7%C3%B5es-Denise-Yamamoto-334389680332511/" data-width="" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 
 <hr /><hr />
 <center>
