--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   <title>Rádio Composições Divinas</title>
   </head>
 
-<center><iframe frameborder="0" seamless="seamless" scrolling="no" src="hhttp://www.urlinteligente.com/radiocomposicoesdivinas/" width="90%" height="16%"></iframe>
+<center><p><iframe align="middle" frameborder="0" height="520" name="janela_principal" scrolling="yes" src="http://www.urlinteligente.com/radiocomposicoesdivinas/" title="janela_principal" width="120"></iframe></p>
+
 <div style="width:100%"><img src="http://rcd.arquivocristao.com.br/banner_radio_composi%C3%A7oes_divinas.png" style="width:100%" /></div>
 
 <p align="center"><div id="fb-root"></div>
