--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <title>Rádio Composições Divinas</title>
   </head>
 
-<center><p><iframe align="middle" frameborder="0" height="100%" name="janela_principal" scrolling="yes" src="http://www.urlinteligente.com/radiocomposicoesdivinas/" title="janela_principal" width="16%"></iframe></p>
+<center><p><iframe align="middle" frameborder="0" height="16%" name="janela_principal" scrolling="no" src="http://www.urlinteligente.com/radiocomposicoesdivinas/" title="janela_principal" width="100%"></iframe></p>
 
 <div style="width:100%"><img src="http://rcd.arquivocristao.com.br/banner_radio_composi%C3%A7oes_divinas.png" style="width:100%" /></div>
 
