--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <title>Rádio Composições Divinas</title>
   </head>
 
-<center><p><iframe align="middle" frameborder="0" height="16%" name="janela_principal" scrolling="no" src="http://www.urlinteligente.com/radiocomposicoesdivinas/" title="janela_principal" width="100%"></iframe></p>
+<div><center><p><iframe align="middle" frameborder="0" height="16%" name="janela_principal" scrolling="no" src="http://www.urlinteligente.com/radiocomposicoesdivinas/" title="janela_principal" width="100%"></iframe></p></center>
 
-<div style="width:100%"><img src="http://rcd.arquivocristao.com.br/banner_radio_composi%C3%A7oes_divinas.png" style="width:100%" /></div>
+<style="width:100%"><img src="http://rcd.arquivocristao.com.br/banner_radio_composi%C3%A7oes_divinas.png" style="width:100%" /></div>
 
 <p align="center"><div id="fb-root"></div>
 <script>(function(d, s, id) {
