--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 <hr /><hr />
 <div style="width:80%"><img src="https://scontent-gru2-1.xx.fbcdn.net/v/t1.0-9/19105741_1395389260554360_3579632257448188356_n.jpg?oh=0906641b3c9b2fe1ddefeb915ff68848&oe=5A95FB3C" style="width:80%" /></div>
 <hr /><hr />
-<p style="text-align:center"><iframe frameborder="0" height="200" scrolling="yes" src="      
+<p style="text-align:center"><iframe frameborder="0" height="30%" scrolling="yes" src="      
 
  http://urlinteligente.com/versiculos_biblicos1.html    
  
- " width="400"></p>
+ " width="60%"></p>
 <hr /><hr />
 
  </body>
