--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <title>Rádio Composições Divinas</title>
   </head>
 
-<center><iframe align="middle" frameborder="0" height="16%" name="janela_principal" scrolling="no" src="http://www.urlinteligente.com/radiocomposicoesdivinas/" title="janela_principal" width="100%"></iframe>
+<center><iframe align="middle" frameborder="0" height="80" name="janela_principal" scrolling="no" src="http://www.urlinteligente.com/radiocomposicoesdivinas/" title="janela_principal" width="300"></iframe>
 
 <style="width:100%"><img src="http://rcd.arquivocristao.com.br/banner_radio_composi%C3%A7oes_divinas.png" style="width:100%" />
 
