--- a/index.html
+++ b/index.html
@@ -60,6 +60,23 @@
  
  " width="60%"></p>
 <hr /><hr />
+<div align="center">
+<span style="font-size: x-large;">Deixe seus recadinhos:</span></div>
+<div align="center">
+</div>
+<div id="fb-root">
+</div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.5&appId=345836655604854";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<br />
+<div class="fb-comments" data-colorscheme="light" data-href="http://rcd.arquivocristao.com.br/" data-numposts="8" data-width="90%">
+</div>
 
  </body>
 </html>
