--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
 <link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/21046730?v=3&s=200">
   <title>Rádio Composições Divinas</title>
   </head>
-
-<center><iframe align="middle" frameborder="0" height="50" name="janela_principal" scrolling="no" src="http://www.urlinteligente.com/radiocomposicoesdivinas/" title="janela_principal" width="650"></iframe>
+body{
+        background-size: cover;
+    margin: 0;
+}   
+<center><iframe align="middle" frameborder="0" height="70" name="janela_principal" scrolling="no" src="http://www.urlinteligente.com/radiocomposicoesdivinas/" title="janela_principal" width="650"></iframe>
 
 <style="width:100%"><img src="http://rcd.arquivocristao.com.br/banner_radio_composi%C3%A7oes_divinas.png" style="width:100%" />
 
