--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/21046730?v=3&s=200">
   <title>Rádio Composições Divinas</title>
   </head>
-body{
-        background-size: cover;
-    margin: 0;
-}   
+<body>
 <center><iframe align="middle" frameborder="0" height="70" name="janela_principal" scrolling="no" src="http://www.urlinteligente.com/radiocomposicoesdivinas/" title="janela_principal" width="650"></iframe>
 
 <style="width:100%"><img src="http://rcd.arquivocristao.com.br/banner_radio_composi%C3%A7oes_divinas.png" style="width:100%" />
@@ -57,7 +54,7 @@ body{
 <hr /><hr />
 <div style="width:80%"><img src="https://scontent-gru2-1.xx.fbcdn.net/v/t1.0-9/19105741_1395389260554360_3579632257448188356_n.jpg?oh=0906641b3c9b2fe1ddefeb915ff68848&oe=5A95FB3C" style="width:80%" /></div>
 <hr /><hr />
-<p style="text-align:center"><iframe frameborder="0" height="40%" scrolling="yes" src="      
+<p style="text-align:center"><iframe frameborder="0" height="50%" scrolling="yes" src="      
 
  http://urlinteligente.com/versiculos_biblicos1.html    
  
