--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
  http://urlinteligente.com/versiculos_biblicos1.html    
  
  " width="60%"></p>
-<hr /><hr />
+<p align="center"><div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.3&appId=345836655604854";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+      
+<font color="#FFFFFF"><b>Olá amigos! Avisem da novidade, obrigada.</b></font><font color="#800000"> </font>     
+<div class="fb-send" data-href="http://www.arquivocristao.com.br/"></div>
+                                                                  
 <div align="center">
 <span style="font-size: x-large;">Deixe seus recadinhos:</span></div>
 <div align="center">
