--- a/index.html
+++ b/index.html
@@ -54,11 +54,6 @@
 <hr /><hr />
 <div style="width:80%"><img src="https://scontent-gru2-1.xx.fbcdn.net/v/t1.0-9/19105741_1395389260554360_3579632257448188356_n.jpg?oh=0906641b3c9b2fe1ddefeb915ff68848&oe=5A95FB3C" style="width:80%" /></div>
 <hr /><hr />
-<p style="text-align:center"><iframe frameborder="0" height="50%" scrolling="yes" src="      
-
- http://urlinteligente.com/versiculos_biblicos1.html    
- 
- " width="60%"></p>
 <p align="center"><div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -88,6 +83,12 @@
 <br />
 <div class="fb-comments" data-colorscheme="light" data-href="http://rcd.arquivocristao.com.br/" data-numposts="8" data-width="90%">
 </div>
+<p style="text-align:center"><iframe frameborder="0" height="50%" scrolling="no" src="      
+
+ http://urlinteligente.com/versiculos_biblicos1.html    
+ 
+ " width="70%"></p>
+
 
  </body>
 </html>
