--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 }(document, 'script', 'facebook-jssdk'));</script>
       
 <font color="#FFFFFF"><b>Olá amigos! Avisem da novidade, obrigada.</b></font><font color="#800000"> </font>     
-<div class="fb-send" data-href="http://www.arquivocristao.com.br/"></div>
+<div class="fb-send" data-href="http://rcd.arquivocristao.com.br/"></div>
                                                                   
 <div align="center">
 <span style="font-size: x-large;">Deixe seus recadinhos:</span></div>
@@ -83,12 +83,13 @@
 <br />
 <div class="fb-comments" data-colorscheme="light" data-href="http://rcd.arquivocristao.com.br/" data-numposts="8" data-width="90%">
 </div>
+                                                                                                                                  <div>
 <p style="text-align:center"><iframe frameborder="0" height="50%" scrolling="no" src="      
 
  http://urlinteligente.com/versiculos_biblicos1.html    
  
  " width="70%"></p>
-
+</div>
 
  </body>
 </html>
